feature fullscreen canvas

--- a/src/routes/AlwordPage/Alword-page.css
+++ b/src/routes/AlwordPage/Alword-page.css
@@ -1,5 +1,11 @@
-.Alword-container {
+html, body {
+  overflow: hidden;
+}
+
+/* .Alword-container {
   margin: auto;
-  height: 400px;
-  max-width: 1500px;
+} */
+#canvas
+{
+  background: black;
 }
