--- a/src/routes/PrometiumPage/prometium-page.css
+++ b/src/routes/PrometiumPage/prometium-page.css
@@ -1,5 +1,12 @@
 .prometium-container {
   margin: auto;
-  height: 400px;
+  min-height: 200px;
+  height: calc(100vh - 64px - 32px);
   max-width: 1500px;
+}
+
+@media screen and (max-width: 960px) {
+  .prometium-container {
+    height: calc(100vh - 48px - 32px);
+  }
 }
