--- a/src/components/MemeComponent/meme-component.css
+++ b/src/components/MemeComponent/meme-component.css
@@ -1,5 +1,25 @@
-.meme_div{
+.meme_div {
+    position: fixed;
     display: flex;
+    justify-content: center;
     align-items: center;
-    justify-content: center
+    background: rgba(0, 0, 0, .7);
+    z-index: 100;
+    top: 0;
+    left: 0;
+    right: 0;
+    bottom: 0;
+}
+
+.overlay {
+    position: absolute;
+    width: 100%;
+    height: 100%;
+    z-index: 1;
+}
+
+.modal-window {
+    width: 300px;
+    height: 500px;
+    z-index: 2;
 }
