--- a/src/components/MemeComponent/meme-component.css
+++ b/src/components/MemeComponent/meme-component.css
@@ -9,17 +9,9 @@
     left: 0;
     right: 0;
     bottom: 0;
+    cursor: pointer;
 }
 
-.overlay {
-    position: absolute;
-    width: 100%;
-    height: 100%;
-    z-index: 1;
-}
-
-.modal-window {
-    width: 300px;
-    height: 500px;
-    z-index: 2;
+.inner_div {
+    cursor: default;
 }
