--- a/src/routes/VirachevPage/VirachevPage.css
+++ b/src/routes/VirachevPage/VirachevPage.css
@@ -1,15 +1,16 @@
-body {
+#wrapperVirachev{
+    min-height: 100%;
     background-color: #0087aa;
 }
 
-.wrapper{
+.dropnbox{
     width: 270px;
     margin: 10px auto;
     background-color: #88c3ea;
-    padding: 15px 10px 5px 10px;
+    padding: 15px 10px 20px 10px;
 }
 
-ul {
+#list {
     margin: 0;
     padding: 0;
     -webkit-user-select: none;
@@ -17,7 +18,7 @@ ul {
     user-select: none;
 }
 
-li {
+#list li {
     list-style: none;
     background: url(image/1.jpg) no-repeat center;
     background-size: contain;
