--- a/src/routes/VinnikovPage/VinnikovPage.css
+++ b/src/routes/VinnikovPage/VinnikovPage.css
@@ -1,4 +1,7 @@
-.active-pink-2 input[type="text"]:focus:not([readonly]) {
-  border-bottom: 1px solid #f48fb1;
-  box-shadow: 0 1px 0 0 #f48fb1;
+.searchWrapper{
+  width: 650px;
+  margin: 20px auto;
+}
+.MuiPaper-elevation1 {
+  box-shadow: none !important;
 }
