--- a/src/components/MemeComponent/meme-component.css
+++ b/src/components/MemeComponent/meme-component.css
@@ -1,17 +1,17 @@
 .meme_div {
-    position: fixed;
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    background: rgba(0, 0, 0, .7);
-    z-index: 100;
-    top: 0;
-    left: 0;
-    right: 0;
-    bottom: 0;
-    cursor: pointer;
+  position: fixed;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  background: rgba(0, 0, 0, 0.7);
+  z-index: 100;
+  top: 0;
+  left: 0;
+  right: 0;
+  bottom: 0;
+  cursor: pointer;
 }
 
 .inner_div {
-    cursor: default;
+  cursor: default;
 }
