--- a/src/components/NavigateButton/NavigateButton.css
+++ b/src/components/NavigateButton/NavigateButton.css
@@ -1,64 +1,66 @@
 body {
-    background-color: #f8f8f8;
+  background-color: #f8f8f8;
 }
 
 .cardContainer {
-    background-color: white;
-    width: 340px;
-    height: 190px;
-    box-shadow: 0px 0.3px 0.9px rgba(0, 0, 0, 0.108), 0px 1.6px 3.6px rgba(0, 0, 0, 0.132);
-    border-radius: 2px;
-    margin-top: 2vh;
-    transition: box-shadow .5s;
+  background-color: white;
+  width: 340px;
+  height: 190px;
+  box-shadow: 0px 0.3px 0.9px rgba(0, 0, 0, 0.108),
+    0px 1.6px 3.6px rgba(0, 0, 0, 0.132);
+  border-radius: 2px;
+  margin-top: 2vh;
+  transition: box-shadow 0.5s;
 }
 
 .cardHeader {
-    width: auto;
-    height: 40px;
-    border-bottom: 1px solid #EDEBE9;
-    display: flex;
-    align-items: center;
+  width: auto;
+  height: 40px;
+  border-bottom: 1px solid #edebe9;
+  display: flex;
+  align-items: center;
 }
 
 .cardIdentity {
-    position: relative;
-    left: 12px;
-    top: 5px;
-    width: 50%;
-    height: 32px;
-    display: flex;
+  position: relative;
+  left: 12px;
+  top: 5px;
+  width: 50%;
+  height: 32px;
+  display: flex;
 }
 
 .icon {
-    width: 24px;
-    height: 24px;
-    border-radius: 12px;
-    background-color: rgba(252, 37, 118, 0.4);
+  width: 24px;
+  height: 24px;
+  border-radius: 12px;
+  background-color: rgba(252, 37, 118, 0.4);
 }
 
 .cardIdentity h4 {
-    margin-left: 8px;
-    height: 20px;
-    font-family: "Segoe UI", sans-serif;
-    font-weight: 500;
-    margin-top: 3px;
+  margin-left: 8px;
+  height: 20px;
+  font-family: 'Segoe UI', sans-serif;
+  font-weight: 500;
+  margin-top: 3px;
 }
 
 .cardBody {
-    text-align: center;
-    vertical-align: middle;
-    height: 144px;
-    width: 340px;
-    display: table-cell;
+  text-align: center;
+  vertical-align: middle;
+  height: 144px;
+  width: 340px;
+  display: table-cell;
 }
 
 .cardBody h1 {
-    font-weight: 600;
-    font-size: 40px;
-    margin-bottom: 0px;
+  font-weight: 600;
+  font-size: 40px;
+  margin-bottom: 0px;
 }
 
 .cardContainer:hover {
-    box-shadow: 0px 1.2px 3.6px rgba(0, 0, 0, 0.108), 0px 6.4px 14.4px rgba(0, 0, 0, 0.132);
-    cursor: pointer;
+  box-shadow: 0px 1.2px 3.6px rgba(0, 0, 0, 0.108),
+    0px 6.4px 14.4px rgba(0, 0, 0, 0.132);
+  cursor: pointer;
 }
