--- a/src/components/VKLabel/vklabel.css
+++ b/src/components/VKLabel/vklabel.css
@@ -1,88 +1,93 @@
-@import url(https://fonts.googleapis.com/css?family=Raleway:400,600);
-*, *:before, *:after {
-    box-sizing: border-box;
+@import url(https://fonts.googleapis.com/css?family=Raleway:400, 600);
+*,
+*:before,
+*:after {
+  box-sizing: border-box;
 }
 
 .main {
-    background: url('https://s3-us-west-2.amazonaws.com/s.cdpn.io/195612/blurred_bg3.jpg') no-repeat center center fixed;
-    background-size: cover;
-    position: absolute;
-    top: 0px;
-    left: 0px;
-    width: 100%;
-    height: 100%;
+  background: url('https://s3-us-west-2.amazonaws.com/s.cdpn.io/195612/blurred_bg3.jpg')
+    no-repeat center center fixed;
+  background-size: cover;
+  position: absolute;
+  top: 0px;
+  left: 0px;
+  width: 100%;
+  height: 100%;
 }
 
 .user-card {
-    font: 13px/23px "Raleway", Arial, sans-serif;
-    color: #303336;
-    padding: 40px 0;
+  font: 13px/23px 'Raleway', Arial, sans-serif;
+  color: #303336;
+  padding: 40px 0;
 }
 
 .container {
-    margin: 0 auto;
-    width: 300px;
-    height: 465px;
-    background: white;
-    border-radius: 3px;
-    position: relative
+  margin: 0 auto;
+  width: 300px;
+  height: 465px;
+  background: white;
+  border-radius: 3px;
+  position: relative;
 }
 
 .information {
-    text-align: center;
+  text-align: center;
 }
 
 .avatar {
-    
-    margin: 0 auto;
-    margin: -82px auto 15px;
-    display: block;
-    border-radius: 110px;
-    width: 110px;
-    height: 110px;
-    background-size: cover;
-    background-position: top center;
-    border-radius: 50%;
+  margin: 0 auto;
+  margin: -82px auto 15px;
+  display: block;
+  border-radius: 110px;
+  width: 110px;
+  height: 110px;
+  background-size: cover;
+  background-position: top center;
+  border-radius: 50%;
 }
 
 .name {
-    font-size: 22px;
+  font-size: 22px;
 }
 
 .position {
-    font-size: 16px;
-    color: #8c98a8;
-    margin-bottom: 24px;
+  font-size: 16px;
+  color: #8c98a8;
+  margin-bottom: 24px;
 }
 
 .stats {
-    margin: auto;
-    border-top: 1px solid #CED5E0;
-    width: 300;
+  margin: auto;
+  border-top: 1px solid #ced5e0;
+  width: 300;
 }
 
-.followers, .following, .stories {
-    display: inline-block;
-    padding: 6px 10px 0;
+.followers,
+.following,
+.stories {
+  display: inline-block;
+  padding: 6px 10px 0;
 }
 
-.followers, .following {
-    border-right: 1px solid #CED5E0;
+.followers,
+.following {
+  border-right: 1px solid #ced5e0;
 }
 
 .value {
-    font-size: 18px;
-    font-weight: 600;
+  font-size: 18px;
+  font-weight: 600;
 }
 
 .label {
-    display: block;
-    font-size: 14px;
-    color: #8c98a8;
+  display: block;
+  font-size: 14px;
+  color: #8c98a8;
 }
 
-.hero-image{
-    width: 300px;
-    height: 244px;
-    background: url(https://s3-us-west-2.amazonaws.com/s.cdpn.io/195612/cookies.jpg);
+.hero-image {
+  width: 300px;
+  height: 244px;
+  background: url(https://s3-us-west-2.amazonaws.com/s.cdpn.io/195612/cookies.jpg);
 }
