--- a/src/routes/JustalgitPage/JustalgitPage.css
+++ b/src/routes/JustalgitPage/JustalgitPage.css
@@ -1,5 +1,5 @@
 * {
-    margin: 0;
+  margin: 0;
 }
 
 html,
@@ -8,69 +8,73 @@ body {
 }
 
 body {
-    display: flex;
-    flex-direction: column;
+  display: flex;
+  flex-direction: column;
 }
 
 .content {
-    background-image: url(image/sky.jpg);
-    height: 600px;
+  background-image: url(image/sky.jpg);
+  height: 600px;
 }
 
 .outerDiv {
-    background: linear-gradient(0deg, rgba(159,157,209,1) 0%, rgba(180,227,255,1) 100%);
-    border: 1px solid;
-    margin: 50px auto;
-    position: relative;
-    align-items: center;
-    width: 500px;
-    box-shadow: 0px 2px 10px #000;
+  background: linear-gradient(
+    0deg,
+    rgba(159, 157, 209, 1) 0%,
+    rgba(180, 227, 255, 1) 100%
+  );
+  border: 1px solid;
+  margin: 50px auto;
+  position: relative;
+  align-items: center;
+  width: 500px;
+  box-shadow: 0px 2px 10px #000;
 }
 
 .input {
-    overflow:hidden;
-    display: block;
-    background-color:#FFF;
-    color:#222;
-    font-family:Arial, Helvetica, sans-serif;
-    font-weight:normal;
-    border-radius: 4px;
-    font-size: 18px;
-    line-height:40px;
-    padding: 20px 10px;
-    position: relative;
-    margin: 25px auto;
-    width: 350px;
-    height: 15px;
-    border-radius: 4px;
-    box-shadow: 0px 2px 10px #000;
+  overflow: hidden;
+  display: block;
+  background-color: #fff;
+  color: #222;
+  font-family: Arial, Helvetica, sans-serif;
+  font-weight: normal;
+  border-radius: 4px;
+  font-size: 18px;
+  line-height: 40px;
+  padding: 20px 10px;
+  position: relative;
+  margin: 25px auto;
+  width: 350px;
+  height: 15px;
+  border-radius: 4px;
+  box-shadow: 0px 2px 10px #000;
 }
 
 .button {
-    display: block;
-    font-family:Arial, Helvetica, sans-serif;
-    font-weight:normal;
-    background-color:#FFF;
-    color:#222;
-    font-size: 16px;
-    width: 220px;
-    height: 40px;
-    margin: 20px auto;
-    position: relative;
-    border-radius: 8px;
-    box-shadow: 0px 2px 10px #000;
+  display: block;
+  font-family: Arial, Helvetica, sans-serif;
+  font-weight: normal;
+  background-color: #fff;
+  color: #222;
+  font-size: 16px;
+  width: 220px;
+  height: 40px;
+  margin: 20px auto;
+  position: relative;
+  border-radius: 8px;
+  box-shadow: 0px 2px 10px #000;
 }
 
 .weatherParamInfo {
-    display: block;
-    font-family:Arial, Helvetica, sans-serif;
-    font-weight:normal;
-    margin: 16px auto;
-    text-align: center;
-    font-size: 18px;
+  display: block;
+  font-family: Arial, Helvetica, sans-serif;
+  font-weight: normal;
+  margin: 16px auto;
+  text-align: center;
+  font-size: 18px;
 }
 
 #footer {
-    flex: 0 0 auto;
-    height: 100px;
+  flex: 0 0 auto;
+  height: 100px;
 }
