--- a/src/routes/AntoniKochetPage/AntoniKochet-page.css
+++ b/src/routes/AntoniKochetPage/AntoniKochet-page.css
@@ -1,23 +1,26 @@
-html,
-body {
-  height: 100%;
-}
-
-.content {
-  height: 800px;
-  justify-content: center;
+.antoni-kochet-page {
+  position: absolute;
+  top: 0;
+  right: 0;
+  bottom: 0;
+  left: 0;
+  z-index: -1;
   background-image: url(github_PNG28.png);
 }
 
-.outerDiv {
-  margin-top: 20px;
+.antoni-kochet-page .content {
+  margin-top: 80px;
+}
+
+.antoni-kochet-page .outerDiv {
   display: flex;
   justify-content: center;
   padding-top: 16px;
   align-items: center;
-  flex-direction: colu;
+  flex-direction: column;
 }
-.input {
+
+.antoni-kochet-page .input {
   display: block;
   background-color: #fff;
   color: #222;
@@ -31,7 +34,7 @@ body {
   height: 40px;
 }
 
-.button {
+.antoni-kochet-page .button {
   display: block;
   font-family: Arial, Helvetica, sans-serif;
   font-weight: normal;
@@ -43,14 +46,14 @@ body {
   position: relative;
 }
 
-.vklabel {
+.antoni-kochet-page .vklabel {
   position: fixed;
   right: 0;
   bottom: 0;
   margin: 10px;
 }
 
-.ReposUser {
+.antoni-kochet-page .ReposUser {
   justify-content: center;
   margin: auto;
 }
