--- a/src/routes/JustalgitPage/JustalgitPage.css
+++ b/src/routes/JustalgitPage/JustalgitPage.css
@@ -1,23 +1,14 @@
-* {
-  margin: 0;
-}
-
-html,
-body {
-  height: 100%;
-}
-
-body {
+.justalgit-page {
   display: flex;
   flex-direction: column;
 }
 
-.content {
+.justalgit-page .content {
   background-image: url(image/sky.jpg);
   height: 600px;
 }
 
-.outerDiv {
+.justalgit-page .outerDiv {
   background: linear-gradient(
     0deg,
     rgba(159, 157, 209, 1) 0%,
@@ -31,7 +22,7 @@ body {
   box-shadow: 0px 2px 10px #000;
 }
 
-.input {
+.justalgit-page .input {
   overflow: hidden;
   display: block;
   background-color: #fff;
@@ -50,14 +41,13 @@ body {
   box-shadow: 0px 2px 10px #000;
 }
 
-.button {
+.justalgit-page .button {
   display: block;
   font-family: Arial, Helvetica, sans-serif;
   font-weight: normal;
   background-color: #fff;
   color: #222;
   font-size: 16px;
-  width: 220px;
   height: 40px;
   margin: 20px auto;
   position: relative;
@@ -65,7 +55,7 @@ body {
   box-shadow: 0px 2px 10px #000;
 }
 
-.weatherParamInfo {
+.justalgit-page .weatherParamInfo {
   display: block;
   font-family: Arial, Helvetica, sans-serif;
   font-weight: normal;
@@ -74,7 +64,7 @@ body {
   font-size: 18px;
 }
 
-#footer {
+.justalgit-page #footer {
   flex: 0 0 auto;
   height: 100px;
 }
