--- a/src/routes/LegendCreoModPage/LegendCreoModPage.css
+++ b/src/routes/LegendCreoModPage/LegendCreoModPage.css
@@ -1,9 +1,12 @@
-html,
-body {
+.legend-creo-mod-page {
+  position: absolute;
+  top: 0;
+  right: 0;
+  bottom: 0;
+  left: 0;
+  z-index: -1;
   margin: 0;
   padding: 0;
-  width: 100%;
-  height: 100%;
   background: rgb(0, 35, 255);
   background: linear-gradient(
     45deg,
@@ -12,7 +15,8 @@ body {
   );
   font-size: 18px;
 }
-.content {
+
+.legend-creo-mod-page .content {
   width: 50%;
   height: 50%;
   position: fixed;
@@ -27,7 +31,8 @@ body {
   box-shadow: 10px 5px 5px black;
   background-color: rgb(255, 255, 255);
 }
-.button {
+
+.legend-creo-mod-page .button {
   font-family: Arial, Helvetica, sans-serif;
   font-weight: normal;
   background-color: #fff;
@@ -37,15 +42,17 @@ body {
   margin: 10px;
 }
 
-.vk {
+.legend-creo-mod-page .vk {
   position: fixed;
   right: 0;
   bottom: 0;
   margin: 10px;
 }
-p {
+
+.legend-creo-mod-page p {
   margin: 10px;
 }
-label {
+
+.legend-creo-mod-page label {
   color: rgb(0, 0, 0);
 }
